--- a/ecotour/scss/page/_single-tour.scss
+++ b/ecotour/scss/page/_single-tour.scss
@@ -164,6 +164,7 @@
   min-height: 20rem;
   position: relative;
   white-space: nowrap;
+  overflow: hidden;
 
   &__img {
     position: absolute;
